--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/button": "^2.0.28",
+    "@nextui-org/react": "^2.3.0",
+    "@nextui-org/system": "^2.1.0",
+    "@nextui-org/theme": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,6 +27,8 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "dotenv": "^16.4.1",
+    "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.1.1",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
