--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -37,6 +37,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-rating": "^2.0.5",
+    "react-responsive-gallery": "^4.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3",
