--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/button": "^2.0.28",
     "@nextui-org/react": "^2.3.0",
+    "@nextui-org/select": "^2.2.1",
     "@nextui-org/system": "^2.1.0",
     "@nextui-org/theme": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -19,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.14.0",
@@ -40,10 +42,12 @@
     "react-multi-carousel": "^2.8.5",
     "react-rating": "^2.0.5",
     "react-responsive-gallery": "^4.0.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
