--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -51,7 +51,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.529.1",
     "@aws-sdk/s3-request-presigner": "^3.529.1",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.13.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -73,8 +73,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
-    "prisma": "^5.10.2",
     "sharp": "^0.33.2",
+    "stripe": "^15.3.0",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
     "validator": "^13.0.0",
@@ -97,6 +97,7 @@
     "node-mocks-http": "^1.8.0",
     "nodemon": "^2.0.0",
     "prettier": "^2.0.5",
+    "prisma": "^5.15.0",
     "supertest": "^6.0.1"
   }
 }
